--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-html,body {
+html,
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -28,6 +29,7 @@ nav {
   text-align: center;
   width: 250px;
 }
+
 nav ul {
   align-items: center;
   display: flex;
@@ -42,12 +44,12 @@ nav li {
 }
 
 nav li a {
-  color: white;
+  color: grey;
   font-size: 1.2rem;
   text-decoration: none;
 }
 
 .nav-active {
-  color: grey;
+  color: white;
   transition: all .3s ease-out;
 }
